--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -3,24 +3,27 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>11:00</td>  <td>Coffee break</td> </tr>
+      <tr> <td>11:15</td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td>13:30</td>  <td>Lunch break</td> </tr>
+      <tr> <td>14:30</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>15:45</td>  <td>Coffee break</td> </tr>
+      <tr> <td>16:00</td>  <td>Version control with Git</td> </tr>
+      <tr> <td>17:30</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>09:00</td>  <td>Plotting and Programming in Python</td></tr>
+      <tr> <td>10:30</td>  <td>Coffee break</td> </tr>
+      <tr> <td>10:45</td>  <td>Plotting and Programming in Python</td></tr>
+      <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
+      <tr> <td>14:00</td>  <td>Plotting and Programming in Python</td> </tr>
+      <tr> <td>15:45</td>  <td>Coffee break</td> </tr>
+      <tr> <td>16:00</td>  <td>Plotting and Programming in Python</td> </tr>
+      <tr> <td>17:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>17:30</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
